feat: add telegram integration endpoints and dashboard UI

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,5 +5,9 @@ NOTION_CLIENT_SECRET=
 NOTION_REDIRECT_URI=
 NOTION_STATE_SECRET=
 NOTION_TOKEN_ENCRYPTION_KEY=
+TELEGRAM_BOT_TOKEN=
+TELEGRAM_LINK_SECRET=
+TELEGRAM_WEBHOOK_SECRET=
+TELEGRAM_BOT_USERNAME=
 FRONTEND_URL=http://localhost:3000
 ALLOWED_ORIGINS=http://localhost:3000,https://metel.vercel.app
