Add LLM planner with OpenAI primary and Gemini fallback

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,5 +9,15 @@ TELEGRAM_BOT_TOKEN=
 TELEGRAM_LINK_SECRET=
 TELEGRAM_WEBHOOK_SECRET=
 TELEGRAM_BOT_USERNAME=
+
 FRONTEND_URL=http://localhost:3000
 ALLOWED_ORIGINS=http://localhost:3000,https://metel.vercel.app
+
+# LLM planner preference (target configuration)
+LLM_PLANNER_ENABLED=true
+LLM_PLANNER_PROVIDER=openai
+LLM_PLANNER_MODEL=gpt-4o-mini
+LLM_PLANNER_FALLBACK_PROVIDER=gemini
+LLM_PLANNER_FALLBACK_MODEL=gemini-2.5-flash-lite
+OPENAI_API_KEY=...
+GOOGLE_API_KEY=...
