Implement autonomous LLM loop and sync docs to current architecture

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -19,5 +19,10 @@ LLM_PLANNER_PROVIDER=openai
 LLM_PLANNER_MODEL=gpt-4o-mini
 LLM_PLANNER_FALLBACK_PROVIDER=gemini
 LLM_PLANNER_FALLBACK_MODEL=gemini-2.5-flash-lite
+LLM_AUTONOMOUS_ENABLED=false
+LLM_AUTONOMOUS_MAX_TURNS=6
+LLM_AUTONOMOUS_MAX_TOOL_CALLS=8
+LLM_AUTONOMOUS_TIMEOUT_SEC=45
+LLM_AUTONOMOUS_REPLAN_LIMIT=1
 OPENAI_API_KEY=...
 GOOGLE_API_KEY=...
