Handle Notion workspace-level archive limitation explicitly

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,10 +1,15 @@
 SUPABASE_URL=
 SUPABASE_SERVICE_ROLE_KEY=
+
 NOTION_CLIENT_ID=
 NOTION_CLIENT_SECRET=
 NOTION_REDIRECT_URI=
 NOTION_STATE_SECRET=
 NOTION_TOKEN_ENCRYPTION_KEY=
+# Optional: create pages under a specific parent page instead of workspace root.
+# This helps avoid Notion API limitation on archiving workspace-level pages.
+NOTION_DEFAULT_PARENT_PAGE_ID=
+
 TELEGRAM_BOT_TOKEN=
 TELEGRAM_LINK_SECRET=
 TELEGRAM_WEBHOOK_SECRET=
