Add autonomous strict mode and one-time retry before rule fallback

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -29,5 +29,7 @@ LLM_AUTONOMOUS_MAX_TURNS=6
 LLM_AUTONOMOUS_MAX_TOOL_CALLS=8
 LLM_AUTONOMOUS_TIMEOUT_SEC=45
 LLM_AUTONOMOUS_REPLAN_LIMIT=1
+LLM_AUTONOMOUS_STRICT=false
+LLM_AUTONOMOUS_LIMIT_RETRY_ONCE=true
 OPENAI_API_KEY=...
 GOOGLE_API_KEY=...
