Fix Notion move parsing and align Notion API version/tools

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,6 +6,7 @@ NOTION_CLIENT_SECRET=
 NOTION_REDIRECT_URI=
 NOTION_STATE_SECRET=
 NOTION_TOKEN_ENCRYPTION_KEY=
+NOTION_API_VERSION=2025-09-03
 # Optional: create pages under a specific parent page instead of workspace root.
 # This helps avoid Notion API limitation on archiving workspace-level pages.
 NOTION_DEFAULT_PARENT_PAGE_ID=
