--- a/backend/.env.example
+++ b/backend/.env.example
@@ -32,5 +32,6 @@ LLM_AUTONOMOUS_TIMEOUT_SEC=45
 LLM_AUTONOMOUS_REPLAN_LIMIT=1
 LLM_AUTONOMOUS_STRICT=false
 LLM_AUTONOMOUS_LIMIT_RETRY_ONCE=true
+LLM_AUTONOMOUS_RULE_FALLBACK_ENABLED=true
 OPENAI_API_KEY=...
 GOOGLE_API_KEY=...
