Add mutation-safe autonomous fallback controls

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -33,5 +33,6 @@ LLM_AUTONOMOUS_REPLAN_LIMIT=1
 LLM_AUTONOMOUS_STRICT=false
 LLM_AUTONOMOUS_LIMIT_RETRY_ONCE=true
 LLM_AUTONOMOUS_RULE_FALLBACK_ENABLED=true
+LLM_AUTONOMOUS_RULE_FALLBACK_MUTATION_ENABLED=false
 OPENAI_API_KEY=...
 GOOGLE_API_KEY=...
