Harden autonomous loop and validate tool specs at startup

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -34,5 +34,6 @@ LLM_AUTONOMOUS_STRICT=false
 LLM_AUTONOMOUS_LIMIT_RETRY_ONCE=true
 LLM_AUTONOMOUS_RULE_FALLBACK_ENABLED=true
 LLM_AUTONOMOUS_RULE_FALLBACK_MUTATION_ENABLED=false
+TOOL_SPECS_VALIDATE_ON_STARTUP=true
 OPENAI_API_KEY=...
 GOOGLE_API_KEY=...
