Improve autonomous reliability and reduce rule fallback dependency

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -21,6 +21,7 @@ ALLOWED_ORIGINS=http://localhost:3000,https://metel.vercel.app
 
 # LLM planner preference (target configuration)
 LLM_PLANNER_ENABLED=true
+LLM_PLANNER_RULE_FALLBACK_ENABLED=true
 LLM_PLANNER_PROVIDER=openai
 LLM_PLANNER_MODEL=gpt-4o-mini
 LLM_PLANNER_FALLBACK_PROVIDER=gemini
@@ -34,6 +35,7 @@ LLM_AUTONOMOUS_STRICT=false
 LLM_AUTONOMOUS_LIMIT_RETRY_ONCE=true
 LLM_AUTONOMOUS_RULE_FALLBACK_ENABLED=true
 LLM_AUTONOMOUS_RULE_FALLBACK_MUTATION_ENABLED=false
+LLM_AUTONOMOUS_PROGRESSIVE_NO_FALLBACK_ENABLED=true
 TOOL_SPECS_VALIDATE_ON_STARTUP=true
 OPENAI_API_KEY=...
 GOOGLE_API_KEY=...
