Add Spotify OAuth and recent-tracks-to-Notion scenario

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,6 +10,10 @@ NOTION_API_VERSION=2025-09-03
 # Optional: create pages under a specific parent page instead of workspace root.
 # This helps avoid Notion API limitation on archiving workspace-level pages.
 NOTION_DEFAULT_PARENT_PAGE_ID=
+SPOTIFY_CLIENT_ID=
+SPOTIFY_CLIENT_SECRET=
+SPOTIFY_REDIRECT_URI=
+SPOTIFY_STATE_SECRET=
 
 TELEGRAM_BOT_TOKEN=
 TELEGRAM_LINK_SECRET=
