Add Apple Music integration scaffolding and disable music dashboard cards

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,6 +15,17 @@ SPOTIFY_CLIENT_SECRET=
 SPOTIFY_REDIRECT_URI=
 SPOTIFY_STATE_SECRET=
 
+# Apple Music integration (required)
+# APPLE_MUSIC_TEAM_ID: Apple Developer > Membership details의 Team ID (예: 1A2BC3D4E5)
+APPLE_MUSIC_TEAM_ID=
+# APPLE_MUSIC_KEY_ID: Apple Developer > Keys에서 MusicKit 키의 Key ID (예: ABCD1234EF)
+APPLE_MUSIC_KEY_ID=
+# APPLE_MUSIC_PRIVATE_KEY: MusicKit 키 생성 시 다운로드한 .p8 내용
+# Single-line PEM recommended (replace line breaks with \n)
+APPLE_MUSIC_PRIVATE_KEY=
+# APPLE_MUSIC_APP_NAME: MusicKit configure 시 사용할 앱 이름
+APPLE_MUSIC_APP_NAME=metel
+
 TELEGRAM_BOT_TOKEN=
 TELEGRAM_LINK_SECRET=
 TELEGRAM_WEBHOOK_SECRET=
