feat: add Linear integration and remove OpenAI provider connection

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -14,6 +14,10 @@ SPOTIFY_CLIENT_ID=
 SPOTIFY_CLIENT_SECRET=
 SPOTIFY_REDIRECT_URI=
 SPOTIFY_STATE_SECRET=
+LINEAR_CLIENT_ID=
+LINEAR_CLIENT_SECRET=
+LINEAR_REDIRECT_URI=
+LINEAR_STATE_SECRET=
 
 TELEGRAM_BOT_TOKEN=
 TELEGRAM_LINK_SECRET=
