feat: finalize hybrid llm agent hardening and live e2e

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -34,16 +34,28 @@ LLM_PLANNER_PROVIDER=openai
 LLM_PLANNER_MODEL=gpt-4o-mini
 LLM_PLANNER_FALLBACK_PROVIDER=gemini
 LLM_PLANNER_FALLBACK_MODEL=gemini-2.5-flash-lite
+
 LLM_AUTONOMOUS_ENABLED=false
 LLM_AUTONOMOUS_MAX_TURNS=6
 LLM_AUTONOMOUS_MAX_TOOL_CALLS=8
 LLM_AUTONOMOUS_TIMEOUT_SEC=45
 LLM_AUTONOMOUS_REPLAN_LIMIT=1
 LLM_AUTONOMOUS_STRICT=false
+LLM_AUTONOMOUS_STRICT_TOOL_SCOPE=true
 LLM_AUTONOMOUS_LIMIT_RETRY_ONCE=true
 LLM_AUTONOMOUS_RULE_FALLBACK_ENABLED=true
 LLM_AUTONOMOUS_RULE_FALLBACK_MUTATION_ENABLED=false
 LLM_AUTONOMOUS_PROGRESSIVE_NO_FALLBACK_ENABLED=true
+LLM_AUTONOMOUS_VERIFIER_ENABLED=false
+LLM_AUTONOMOUS_VERIFIER_FAIL_CLOSED=false
+LLM_AUTONOMOUS_VERIFIER_MAX_HISTORY=8
+LLM_AUTONOMOUS_VERIFIER_REQUIRE_TOOL_EVIDENCE=true
+LLM_AUTONOMOUS_GUARDRAIL_ENABLED=true
+LLM_AUTONOMOUS_GUARDRAIL_TOOL_ERROR_RATE_THRESHOLD=0.6
+LLM_AUTONOMOUS_GUARDRAIL_REPLAN_RATIO_THRESHOLD=0.5
+LLM_AUTONOMOUS_GUARDRAIL_CROSS_SERVICE_BLOCK_THRESHOLD=1
+LLM_HYBRID_EXECUTOR_FIRST=false
+LLM_RESPONSE_FINALIZER_ENABLED=false
 TOOL_SPECS_VALIDATE_ON_STARTUP=true
 OPENAI_API_KEY=...
 GOOGLE_API_KEY=...
