--- a/backend/.env.example
+++ b/backend/.env.example
@@ -34,6 +34,8 @@ LLM_PLANNER_PROVIDER=openai
 LLM_PLANNER_MODEL=gpt-4o-mini
 LLM_PLANNER_FALLBACK_PROVIDER=gemini
 LLM_PLANNER_FALLBACK_MODEL=gemini-2.5-flash-lite
+LLM_REQUEST_TIMEOUT_SEC=20
+LLM_REQUEST_MAX_RETRIES=1
 
 LLM_AUTONOMOUS_ENABLED=false
 LLM_AUTONOMOUS_MAX_TURNS=6
