feat: Enhance Telegram response formatting and refine agent slot filling logic for LLM-generated plans, including validated payload tracking.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -23,6 +23,10 @@ TELEGRAM_BOT_TOKEN=
 TELEGRAM_LINK_SECRET=
 TELEGRAM_WEBHOOK_SECRET=
 TELEGRAM_BOT_USERNAME=
+CONVERSATION_MODE_ENABLED=true
+TELEGRAM_DEBUG_REPORT_ENABLED=false
+TELEGRAM_MESSAGE_MAX_CHARS=3500
+RULE_REPARSE_FOR_LLM_PLAN_ENABLED=false
 
 FRONTEND_URL=http://localhost:3000
 ALLOWED_ORIGINS=http://localhost:3000,https://metel.vercel.app
