--- a/backend/.env.example
+++ b/backend/.env.example
@@ -27,6 +27,7 @@ CONVERSATION_MODE_ENABLED=true
 TELEGRAM_DEBUG_REPORT_ENABLED=false
 TELEGRAM_MESSAGE_MAX_CHARS=3500
 RULE_REPARSE_FOR_LLM_PLAN_ENABLED=false
+PENDING_ACTION_STORAGE=db
 
 FRONTEND_URL=http://localhost:3000
 ALLOWED_ORIGINS=http://localhost:3000,https://metel.vercel.app
