--- a/backend/.env.example
+++ b/backend/.env.example
@@ -28,6 +28,8 @@ TELEGRAM_DEBUG_REPORT_ENABLED=false
 TELEGRAM_MESSAGE_MAX_CHARS=3500
 RULE_REPARSE_FOR_LLM_PLAN_ENABLED=false
 PENDING_ACTION_STORAGE=db
+# Optional: external slot schema override file path (JSON)
+SLOT_SCHEMA_PATH=
 
 FRONTEND_URL=http://localhost:3000
 ALLOWED_ORIGINS=http://localhost:3000,https://metel.vercel.app
