feat: Introduce Skill V2 system with a new orchestrator, skill contracts, and a rollout mechanism including shadow mode.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,29 +7,38 @@ NOTION_REDIRECT_URI=
 NOTION_STATE_SECRET=
 NOTION_TOKEN_ENCRYPTION_KEY=
 NOTION_API_VERSION=2025-09-03
-# Optional: create pages under a specific parent page instead of workspace root.
-# This helps avoid Notion API limitation on archiving workspace-level pages.
 NOTION_DEFAULT_PARENT_PAGE_ID=
-SPOTIFY_CLIENT_ID=
-SPOTIFY_CLIENT_SECRET=
-SPOTIFY_REDIRECT_URI=
-SPOTIFY_STATE_SECRET=
+
 LINEAR_CLIENT_ID=
 LINEAR_CLIENT_SECRET=
 LINEAR_REDIRECT_URI=
 LINEAR_STATE_SECRET=
 
+SPOTIFY_CLIENT_ID=
+SPOTIFY_CLIENT_SECRET=
+SPOTIFY_REDIRECT_URI=
+SPOTIFY_STATE_SECRET=
+
 TELEGRAM_BOT_TOKEN=
 TELEGRAM_LINK_SECRET=
 TELEGRAM_WEBHOOK_SECRET=
 TELEGRAM_BOT_USERNAME=
+
 CONVERSATION_MODE_ENABLED=true
+TELEGRAM_USER_PREFACE_ENABLED=true
+TELEGRAM_USER_PREFACE_LLM_ENABLED=true
+TELEGRAM_USER_PREFACE_MAX_CHARS=240
 TELEGRAM_DEBUG_REPORT_ENABLED=false
 TELEGRAM_MESSAGE_MAX_CHARS=3500
 RULE_REPARSE_FOR_LLM_PLAN_ENABLED=false
 PENDING_ACTION_STORAGE=db
+PENDING_ACTION_TTL_SECONDS=900
+PENDING_ACTION_TABLE=pending_actions
 # Optional: external slot schema override file path (JSON)
 SLOT_SCHEMA_PATH=
+SLOT_LOOP_ENABLED=true
+SLOT_LOOP_ROLLOUT_PERCENT=100
+SLOT_LOOP_METRICS_ENABLED=true
 
 FRONTEND_URL=http://localhost:3000
 ALLOWED_ORIGINS=http://localhost:3000,https://metel.vercel.app
@@ -68,3 +77,16 @@ LLM_RESPONSE_FINALIZER_ENABLED=false
 TOOL_SPECS_VALIDATE_ON_STARTUP=true
 OPENAI_API_KEY=...
 GOOGLE_API_KEY=...
+
+# Skill V2 migration / rollout
+# Enable both flags to activate V2 orchestration path.
+SKILL_ROUTER_V2_ENABLED=false
+SKILL_RUNNER_V2_ENABLED=false
+# Optional: LLM-based router decision before rule fallback.
+SKILL_ROUTER_V2_LLM_ENABLED=false
+# Shadow mode: execute V2 but keep legacy response.
+SKILL_V2_SHADOW_MODE=false
+# Percent of traffic served by V2 (0~100).
+SKILL_V2_TRAFFIC_PERCENT=100
+# Optional comma-separated user_id allowlist for forced V2.
+SKILL_V2_ALLOWLIST=
