feat: Implement Google Calendar OAuth integration by adding new routes, configuration settings, and environment variables.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -13,11 +13,20 @@ LINEAR_CLIENT_ID=
 LINEAR_CLIENT_SECRET=
 LINEAR_REDIRECT_URI=
 LINEAR_STATE_SECRET=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URI=
+GOOGLE_STATE_SECRET=
 
 SPOTIFY_CLIENT_ID=
 SPOTIFY_CLIENT_SECRET=
 SPOTIFY_REDIRECT_URI=
 SPOTIFY_STATE_SECRET=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URI=
+GOOGLE_STATE_SECRET=
 
 TELEGRAM_BOT_TOKEN=
 TELEGRAM_LINK_SECRET=
