feat: Implement autonomous agent rollout decision and application, enhance agent quality evaluation with time-based windows, and refine LLM planner's tool and service scoping with keyword filtering.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -59,10 +59,13 @@ LLM_PLANNER_PROVIDER=openai
 LLM_PLANNER_MODEL=gpt-4o-mini
 LLM_PLANNER_FALLBACK_PROVIDER=google
 LLM_PLANNER_FALLBACK_MODEL=gemini-2.5-flash-lite
+LLM_INTENT_SCHEMA_VERSION=v1
 LLM_REQUEST_TIMEOUT_SEC=20
 LLM_REQUEST_MAX_RETRIES=1
 
 LLM_AUTONOMOUS_ENABLED=false
+LLM_AUTONOMOUS_TRAFFIC_PERCENT=100
+LLM_AUTONOMOUS_SHADOW_MODE=false
 LLM_AUTONOMOUS_MAX_TURNS=6
 LLM_AUTONOMOUS_MAX_TOOL_CALLS=8
 LLM_AUTONOMOUS_TIMEOUT_SEC=45
@@ -79,6 +82,7 @@ LLM_AUTONOMOUS_VERIFIER_MAX_HISTORY=8
 LLM_AUTONOMOUS_VERIFIER_REQUIRE_TOOL_EVIDENCE=true
 LLM_AUTONOMOUS_GUARDRAIL_ENABLED=true
 LLM_AUTONOMOUS_GUARDRAIL_TOOL_ERROR_RATE_THRESHOLD=0.6
+LLM_AUTONOMOUS_GUARDRAIL_MIN_TOOL_SAMPLES=2
 LLM_AUTONOMOUS_GUARDRAIL_REPLAN_RATIO_THRESHOLD=0.5
 LLM_AUTONOMOUS_GUARDRAIL_CROSS_SERVICE_BLOCK_THRESHOLD=1
 LLM_HYBRID_EXECUTOR_FIRST=false
