feat: Add user ID allowlist for Skill+LLM transform pipeline to bypass rollout conditions and update related reports.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -106,3 +106,6 @@ SKILL_V2_ALLOWLIST=
 SKILL_LLM_TRANSFORM_PIPELINE_ENABLED=false
 SKILL_LLM_TRANSFORM_PIPELINE_SHADOW_MODE=false
 SKILL_LLM_TRANSFORM_PIPELINE_TRAFFIC_PERCENT=100
+# Optional comma-separated user_id allowlist for forced Skill+LLM transform serve.
+# If current user_id is listed, rollout percent/hash miss is bypassed.
+SKILL_LLM_TRANSFORM_PIPELINE_ALLOWLIST=
